==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

 - `GROUP BY` now executes against the real columns and fallbacks to
   substituting possible aliases in case the columns do not exist. This will
   cause statements that used alias values that shadowed multiple columns with
   the same name to fail (eg. alias `name` in a join statement where multiple
   tables have the real column `name`). Statements with aliases that shadowed
   a real column and also retrieve that real column will no longer fail as the
   real column will be used in the `GROUP BY` clause (this will not be
   ambigous anymore).

Changes
=======

 - Improved resiliency of the table rename operation.

 - Relaxed column naming restrictions.

 - Improved resiliency of drop, close and open table operations

 - Added empty tables `KEY_COLUMN_USAGE` and `REFERENTIAL_CONSTRAINTS` to
  `INFORMATION_SCHEMA` to be more compliant with the SQL99 standard.

Fixes
=====

 - Fixed an issue that prevents CrateDB from bootstrap on Windows hosts.

 - Fixed an issue that caused queries with ``IS NULL`` or ``IS NOT NULL` on
   columns of type ``geo_point`` to fail.

 - Changed ``crate`` unix/linux startup script to use standard ``sh`` syntax
   instead of ``bash`` specific syntax.
