@@ -31,7 +31,7 @@ public class ExpressionAnalysisContext {
 
     public boolean hasAggregates = false;
 
-    public Function allocateFunction(FunctionInfo functionInfo, List<Symbol> arguments) {
+    Function allocateFunction(FunctionInfo functionInfo, List<Symbol> arguments) {
         Function newFunction = new Function(functionInfo, arguments);
         hasAggregates = hasAggregates || functionInfo.type() == FunctionInfo.Type.AGGREGATE;
         return newFunction;
